--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "axios": "^1.6.0",
     "express": "^4.21.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "traceviewify": "^0.4.0"
   },
   "nx": {
     "includedScripts": [],
