--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/esbuild": "20.7.1",
-    "@nx/eslint": "20.7.1",
-    "@nx/eslint-plugin": "20.7.1",
-    "@nx/jest": "20.7.1",
-    "@nx/js": "20.7.1",
-    "@nx/nest": "20.7.1",
-    "@nx/node": "^20.7.1",
-    "@nx/rollup": "20.7.1",
-    "@nx/vite": "20.7.1",
-    "@nx/web": "20.7.1",
-    "@nx/webpack": "20.7.1",
+    "@nx/esbuild": "21.0.3",
+    "@nx/eslint": "21.0.3",
+    "@nx/eslint-plugin": "21.0.3",
+    "@nx/jest": "21.0.3",
+    "@nx/js": "21.0.3",
+    "@nx/nest": "21.0.3",
+    "@nx/node": "21.0.3",
+    "@nx/rollup": "21.0.3",
+    "@nx/vite": "21.0.3",
+    "@nx/web": "21.0.3",
+    "@nx/webpack": "^21.0.3",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
@@ -37,7 +37,7 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "20.7.1",
+    "nx": "21.0.3",
     "prettier": "^2.6.2",
     "rollup": "^4.14.0",
     "swc-loader": "0.1.15",
@@ -50,6 +50,7 @@
     "vite": "^6.0.0",
     "vite-plugin-dts": "~4.5.0",
     "vitest": "^3.0.0",
+    "webpack": "^5.99.8",
     "webpack-cli": "^5.1.4"
   },
   "workspaces": [
