--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.0.3",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.2",
     "rollup": "^4.14.0",
     "swc-loader": "0.1.15",
