--- a/packages/nx-perf/package.json
+++ b/packages/nx-perf/package.json
@@ -28,8 +28,11 @@
   "nx": {
     "targets": {
       "measure": {
+        "command": "node --cpu-prof --cpu-prof-dir profiles node_modules/nx/bin/nx.js"
+      },
+      "merge": {
         "dependsOn": ["build"],
-        "command": "node packages/nx-perf/dist/bin.esm.js -v"
+        "command": "node packages/nx-perf/dist/bin.esm.js"
       }
     }
   }
