--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "express": "^4.21.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "traceviewify": "^0.4.0"
+    "traceviewify": "^0.4.0",
+    "yargs": "^17.7.2"
   },
   "nx": {
     "includedScripts": [],
