--- a/nx.json
+++ b/nx.json
@@ -95,5 +95,9 @@
     "version": {
       "preVersionCommand": "npx nx run-many -t build"
     }
+  },
+  "tui": {
+    "enabled": false,
+    "autoExit": 0
   }
 }
