--- a/nx.json
+++ b/nx.json
@@ -80,6 +80,15 @@
     "test": {
       "dependsOn": ["^build"]
     },
+    "lint": {
+      "cache": true,
+      "inputs": [
+        "default",
+        "{workspaceRoot}/.eslintrc.json",
+        "{workspaceRoot}/eslint.config.mjs"
+      ],
+      "outputs": ["{options.output-file}"]
+    },
     "@nx/esbuild:esbuild": {
       "cache": true,
       "dependsOn": ["^build"],
