--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,18 @@
     },
     {
       "path": "./packages/cpu-profiling"
+    },
+    {
+      "path": "./packages/cpu-profiling-e2e"
+    },
+    {
+      "path": "./testing/vitest-setup"
+    },
+    {
+      "path": "./testing/setup"
+    },
+    {
+      "path": "./testing/utils"
     }
   ]
 }
