--- a/package.json
+++ b/package.json
@@ -59,12 +59,14 @@
   "workspaces": [
     "packages/*",
     "pkg-0",
-    "packages"
+    "packages",
+    "cpu-profiling-e2e"
   ],
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "ansis": "^4.1.0",
     "axios": "^1.6.0",
     "express": "^4.21.2",
     "reflect-metadata": "^0.1.13",
