--- a/packages/cpu-profiling-e2e/tsconfig.json
+++ b/packages/cpu-profiling-e2e/tsconfig.json
@@ -4,6 +4,12 @@
   "include": [],
   "references": [
     {
+      "path": "../../testing/vitest-setup"
+    },
+    {
+      "path": "../../testing/utils"
+    },
+    {
       "path": "./tsconfig.lib.json"
     },
     {
