--- a/packages/cpu-profiling/tsconfig.lib.json
+++ b/packages/cpu-profiling/tsconfig.lib.json
@@ -31,6 +31,7 @@
     "src/**/*.test.js",
     "src/**/*.spec.js",
     "src/**/*.test.jsx",
-    "src/**/*.spec.jsx"
+    "src/**/*.spec.jsx",
+    "node_modules/**",
   ]
 }
