--- a/packages/cpu-profiling/package.json
+++ b/packages/cpu-profiling/package.json
@@ -1,28 +1,31 @@
 {
   "name": "@push-based/cpu-profiling",
   "version": "0.0.1",
-  "type": "module",
-  "main": "./dist/index.esm.js",
+  "type": "commonjs",
+  "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
-  "types": "./dist/index.esm.d.ts",
+  "types": "./dist/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
       "development": "./src/index.ts",
-      "types": "./dist/index.esm.d.ts",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.esm.js",
-      "default": "./dist/index.esm.js"
+      "require": "./dist/index.cjs.js",
+      "default": "./dist/index.cjs.js"
     }
   },
   "bin": {
-    "@push-based/cpu-prof": "./dist/cpu-prof.esm.js"
+    "@push-based/cpu-prof": "./dist/cpu-prof.cjs.js"
   },
   "scripts": {},
   "files": [
     "dist",
     "!**/*.tsbuildinfo"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "yargs": "^17.7.2"
+  },
   "nx": {
     "name": "cpu-profiling",
     "targets": {
