adjust merge command

--- a/packages/cpu-profiling-e2e/tsconfig.json
+++ b/packages/cpu-profiling-e2e/tsconfig.json
@@ -4,10 +4,7 @@
   "include": [],
   "references": [
     {
-      "path": "../../testing/vitest-setup"
-    },
-    {
-      "path": "../../testing/utils"
+      "path": "../cpu-profiling"
     },
     {
       "path": "./tsconfig.lib.json"
