--- a/packages/cpu-profiling/package.json
+++ b/packages/cpu-profiling/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@push-based/cpu-profiling",
   "version": "0.0.1",
-  "type": "commonjs",
+  "type": "module",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
