fix tests add error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,15 @@
     },
     {
       "path": "./packages/cpu-profiling-e2e"
+    },
+    {
+      "path": "./testing/vitest-setup"
+    },
+    {
+      "path": "./testing/setup"
+    },
+    {
+      "path": "./testing/utils"
     }
   ]
 }
