--- a/packages/cpu-profiling-e2e/tsconfig.lib.json
+++ b/packages/cpu-profiling-e2e/tsconfig.lib.json
@@ -12,6 +12,9 @@
   "include": ["src/**/*.ts"],
   "references": [
     {
+      "path": "../../testing/vitest-setup/tsconfig.lib.json"
+    },
+    {
       "path": "../cpu-profiling/tsconfig.lib.json"
     }
   ],
