--- a/packages/cpu-profiling-e2e/tsconfig.json
+++ b/packages/cpu-profiling-e2e/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../testing/vitest-setup"
+    },
+    {
       "path": "../cpu-profiling"
     },
     {
