--- a/packages/cpu-profiling/tsconfig.lib.json
+++ b/packages/cpu-profiling/tsconfig.lib.json
@@ -12,7 +12,11 @@
     "types": ["node"]
   },
   "include": ["src/**/*.ts"],
-  "references": [],
+  "references": [
+    {
+      "path": "../../testing/vitest-setup/tsconfig.lib.json"
+    }
+  ],
   "exclude": [
     "vite.config.ts",
     "vite.config.mts",
