--- a/dummy/app-0-e2e/tsconfig.json
+++ b/dummy/app-0-e2e/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "out-tsc/@nx-advanced-perf-logging/app-0-e2e",
+    "outDir": "out-tsc/@dummy/app-0-e2e",
     "esModuleInterop": true,
     "noUnusedLocals": false,
     "noImplicitAny": false
