--- a/dummy/pkg-0/package.json
+++ b/dummy/pkg-0/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nx-advanced-perf-logging/pkg-0",
+  "name": "@dummy/pkg-0",
   "version": "0.0.1",
   "private": true,
   "type": "module",
