--- a/dummy/pkg-1/package.json
+++ b/dummy/pkg-1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nx-advanced-perf-logging/pkg-1",
+  "name": "@dummy/pkg-1",
   "version": "0.0.1",
   "private": true,
   "type": "module",
