--- a/dummy/pkg-3/package.json
+++ b/dummy/pkg-3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nx-advanced-perf-logging/pkg-3",
+  "name": "@dummy/pkg-3",
   "version": "0.0.1",
   "private": true,
   "type": "module",
