--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nx-advanced-perf-logging/source",
+  "name": "@push-based/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
