feat: add main process naming

--- a/packages/cpu-prof-e2e/package.json
+++ b/packages/cpu-prof-e2e/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {},
   "implicitDependencies": [
-    "@nx-advanced-perf-logging/cpu-prof"
+    "cpu-prof"
   ],
   "targets": {
     "e2e-test": {
